Add mavros_control package

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "bluerov2"]
-	path = ros2_ws/src/bluerov2
-	url = https://github.com/itskalvik/bluerov2
+[submodule "ros2_ws/src/mavros_control"]
+	path = ros2_ws/src/mavros_control
+	url = https://github.com/itskalvik/mavros_control
